# text-embeddings-inference

./: Cargo.toml  Dockerfile  Dockerfile-cuda  Dockerfile-cuda-all  Makefile  README.md
.github/workflows/: liniting.yaml
backends/: Cargo.toml
backends/candle/: Cargo.toml
backends/candle/src/: compute_cap.rs  lib.rs
backends/candle/src/layers/: cublaslt.rs  layer_norm.rs  linear.rs  mod.rs  rms_norm.rs  rotary.rs
backends/candle/src/models/: flash_gte.rs  flash_mistral.rs  flash_modernbert.rs  flash_nomic.rs  flash_qwen2.rs  flash_qwen3.rs  gemma3.rs
backends/candle/tests/: common.rs
backends/chalice/: Cargo.toml
backends/chalice/src/: alibi.rs  compute_cap.rs  flash_attn.rs  lib.rs
backends/chalice/src/layers/: cublaslt.rs  index_select.rs  layer_norm.rs  linear.rs  rms_norm.rs  rotary.rs
backends/chalice/src/models/: bert.rs  dense.rs  distilbert.rs  flash_bert.rs  flash_distilbert.rs  flash_gte.rs  flash_jina.rs  flash_jina_code.rs  flash_mistral.rs  flash_modernbert.rs  flash_nomic.rs  flash_qwen2.rs  flash_qwen3.rs  gemma3.rs  gte.rs  jina.rs  jina_code.rs  mod.rs  modernbert.rs  mpnet.rs  nomic.rs  qwen3.rs
backends/chalice/tests/: test_bert.rs  test_dense.rs  test_flash_bert.rs  test_flash_gte.rs  test_flash_jina.rs  test_flash_jina_code.rs  test_flash_mistral.rs  test_flash_nomic.rs  test_flash_qwen2.rs  test_flash_qwen3.rs  test_gemma3.rs  test_gte.rs  test_jina.rs  test_jina_code.rs  test_modernbert.rs  test_mpnet.rs  test_nomic.rs  test_qwen3.rs
backends/chalice/tests/snapshots/: test_bert__bert_batch.snap  test_bert__bert_batch_pooled.snap  test_bert__bert_batch_raw.snap  test_bert__bert_classification_single.snap  test_bert__bert_single.snap  test_bert__bert_single_pooled.snap  test_bert__bert_single_raw.snap  test_bert__emotions_batch.snap  test_bert__emotions_single.snap  test_dense__stella_en_400m_v5_default_dense_batch.snap  test_dense__stella_en_400m_v5_default_dense_single.snap  test_dense__stella_en_400m_v5_dense_768_batch.snap  test_dense__stella_en_400m_v5_dense_768_single.snap  test_flash_bert__bert_classification_single.snap  test_flash_bert__emotions_batch.snap  test_flash_bert__emotions_single.snap  test_flash_bert__mini_batch.snap  test_flash_bert__mini_batch_pooled.snap  test_flash_bert__mini_batch_raw.snap  test_flash_bert__mini_single.snap  test_flash_bert__mini_single_pooled.snap  test_flash_bert__mini_single_raw.snap  test_flash_gte__gte_batch.snap  test_flash_gte__gte_classification_single.snap  test_flash_gte__gte_single.snap  test_flash_jina__jina_batch.snap  test_flash_jina__jina_single.snap  test_flash_jina_code__jina_code_batch.snap  test_flash_jina_code__jina_code_single.snap  test_flash_mistral__mistral_batch.snap  test_flash_mistral__mistral_single.snap  test_flash_nomic__nomic_batch.snap  test_flash_nomic__nomic_moe_batch.snap  test_flash_nomic__nomic_moe_single.snap  test_flash_nomic__nomic_single.snap  test_flash_qwen2__qwen2_batch.snap  test_flash_qwen2__qwen2_single.snap  test_flash_qwen3__qwen3_batch.snap  test_flash_qwen3__qwen3_single.snap  test_gemma3__gemma3_cpu_batch.snap  (+36 more)
backends/core/: Cargo.toml
backends/grpc-client/: Cargo.toml
backends/grpc-metadata/: Cargo.toml
backends/ort/: Cargo.toml
backends/ort/src/: lib.rs
backends/python/: Cargo.toml
backends/src/: dtype.rs  lib.rs
core/: Cargo.toml
docs/source/en/: index.md  (+3 more)
router/: Cargo.toml
router/src/: lib.rs  main.rs
