[workspace]
members = [
    "backends",
    "backends/candle",
    "backends/ort",
    "backends/core",
    "backends/python",
    "backends/grpc-client",
    "core",
    "router",
]
default-members = [
    "backends",
    "backends/candle",
    "backends/ort",
    "backends/core",
    "backends/python",
    "backends/grpc-client",
    "core",
    "router",
]
resolver = "2"

[workspace.package]
version = "1.8.3"
edition = "2021"
authors = ["Olivier Dehaene", "Nicolas Patry", "Alvaro Bartolome"]
homepage = "https://github.com/huggingface/text-embeddings-inference"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.1", features = ["derive", "env"] }
hf-hub = { version = "0.4", features = ["tokio"], default-features = false }
metrics = "0.23"
nohash-hasher = "0.2"
num_cpus = "1.16.0"
tokenizers = { version = "0.21.0", default-features = false, features = ["onig", "esaxx_fast"] }
tokio = { version = "1.25", features = ["rt", "rt-multi-thread", "parking_lot", "sync", "signal"] }
tracing = "0.1"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.9"
serial_test = "2.0.0"
intel-mkl-src = { version = "0.8", default-features = false }
# Geodesa Chalice fork, aligned with Hedron.
candle = { package = "chalice-core", git = "ssh://git@github.com/geodesa-ai/chalice.git", branch = "codex/cudarc-geodesa-deps" }
candle-nn = { package = "chalice-nn", git = "ssh://git@github.com/geodesa-ai/chalice.git", branch = "codex/cudarc-geodesa-deps" }
candle-transformers = { package = "chalice-transformers", git = "ssh://git@github.com/geodesa-ai/chalice.git", branch = "codex/cudarc-geodesa-deps" }
candle-flash-attn = { package = "chalice-flash-attn", git = "ssh://git@github.com/geodesa-ai/chalice.git", branch = "codex/cudarc-geodesa-deps" }
candle-flash-attn-v1 = { version = "0.0.1" }
half = { version = "2.3.1", features = ["num-traits"] }

[profile.release]
debug = 0
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = 1
lto = "thin"
codegen-units = 16
strip = "none"
