[package]
name = "text-embeddings-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true, optional = true }
hf-hub = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
text-embeddings-backend-core = { path = "core" }
text-embeddings-backend-python = { path = "python", optional = true }
text-embeddings-backend-chalice = { path = "chalice", optional = true }
text-embeddings-backend-ort = { path = "ort", optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[features]
clap = ["dep:clap", "text-embeddings-backend-core/clap"]
python = ["dep:text-embeddings-backend-python"]
ort = ["dep:text-embeddings-backend-ort"]
chalice = ["dep:text-embeddings-backend-chalice"]
cuda = ["text-embeddings-backend-chalice?/cuda"]
metal = ["text-embeddings-backend-chalice?/metal"]
mkl = ["text-embeddings-backend-chalice?/mkl"]
accelerate = ["text-embeddings-backend-chalice?/accelerate"]
flash-attn = ["text-embeddings-backend-chalice?/flash-attn"]
